# dsa-practice-python

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.hypothesis/constants/: 0592b0401dd9d233  9ea9459dd80049cf  9f8356408e4b9c0d
ai_prompts_library/: ai-prompts-library.md  links.md  lyra-prompt-optimizer.md  prompt-generator.md
hypothesis_practice/: example.py
others/: 000_factorial.py
project_euler/: 0001_multiples.py
structy/: 003__hey_programmer.py  005__longest_word.py
structy/00_introduction/: 004__max_value.py  006__is_prime.py
